K8s/spree/spree-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spree
  namespace: spree
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: 3000
  selector:
    run: spree
